# roster

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  TODO.md  build-app.sh  install.sh  pyproject.toml  setup_app.py  uninstall.sh
MenuBarApp/: Package.swift
MenuBarApp/Resources/: Info.plist
MenuBarApp/Sources/ClaudeProfiles/: AppDelegate.swift  ColorExtension.swift  Models.swift  NewProfileView.swift  ProfileStore.swift  UpdateChecker.swift
app/: Info.plist  build.sh
app/src/: Managers.h  Managers.m  Models.h  Models.m  Picker.h  Picker.m  UI.h  UI.m  main.m
claude_profiles/: __init__.py  cli.py  code.py  desktop.py  gui.py  manager.py  profile.py
menubar/: menubar.py
resources/: icon.icns
scripts/: make_icon.py
tests/: test_cli.py  test_code.py  test_desktop.py  test_manager.py  test_profile.py
tools/: install-cli.sh  makeicon.m  makeicon.sh  roster-shim.sh
