[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claude-profiles"
version = "0.1.0"
description = "Run multiple Claude Desktop / Code accounts simultaneously on macOS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["claude", "anthropic", "profiles", "macos", "multi-account"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
]

[project.scripts]
claude-profiles = "claude_profiles.cli:main"

[project.urls]
Repository = "https://github.com/yourusername/claude-profiles"

[tool.setuptools.packages.find]
include = ["claude_profiles*"]
